--- a/views/projects_form.pug
+++ b/views/projects_form.pug
@@ -1,6 +1,7 @@
 extends layout
 
 block content
+
   h1 #{title}
 
   if errors 
@@ -15,4 +16,9 @@ block content
     div.form-group
       label(for='name_machine') Machine name:
       input#name.form-control(type='text', placeholder='' name='name_machine' value=(undefined===project ? '' : project.name_machine))
-    button.btn.btn-primary(type='submit') Submit
+
+      div(class='form-actions')
+        button.btn.btn-primary(type='submit') Submit
+        if action === 'update'
+          div(class='cancel-link')
+            a(href=project.url) Cancel
